<resources>
    <string name="app_name" translatable="false">TheMovieDB</string>
    <!--on boarding texts-->
    <string name="on_boarding_text_1">Find in TMDB</string>
    <string name="on_boarding_text_2">Discover the current movies and series of the moment, and have fun searching for suitable content for yourself.</string>
    <string name="on_boarding_button_text">Next</string>
    <!--dashboard activity texts-->
    <string name="logo">Logo</string>
    <string name="home">Home</string>
    <string name="top_rated">The best</string>
    <string name="latest">Latest</string>
    <string name="now_playing">Playing now</string>
    <!--home fragment texts-->
    <string name="info">Information</string>
    <string name="top_rated_movies">Top rated movies</string>
    <string name="latest_movies">Latest movies</string>
    <string name="now_playing_movies">Now playing movies</string>
    <!--latest fragment texts-->
    <string name="info_card_text">The information displayed in this section is constantly updated in real time, so on some occasions it may not show partial or complete information.</string>
    <!--top rated fragment texts-->
    <string name="top_one">1</string>
    <string name="top_two">2</string>
    <string name="top_three">3</string>
    <string name="next_positions">Next positions</string>
    <!--service error message generic-->
    <string name="generic_error_message">Looks like the aliens abducted the info</string>
    <!--detail screen-->
    <string name="reviews">Reviews</string>
    <string name="original_title">Original title</string>
    <string name="genres">Genre(s)</string>
    <string name="you_could_be_interest_in_genre">You could be interest in genre</string>
    <string name="selected_for_you_of_genre">Selected for you of genre</string>
    <string name="do_not_miss_of_genre">Don´t miss of the genre</string>
    <string name="the_new_to_find_out_of_genre">The new to find out of the genre</string>
</resources>